# Text_To_SQL

./: .env.example  .gitignore  EVALUATION_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SYSTEM_DOCUMENTATION.md  database_schema.txt  evaluate.py  examples.py  pyproject.toml  requirements.txt  sql_questions.csv  test_query.py
app/: __init__.py  agent.py  config.py  database.py  decompose.py  evaluation.py  executer.py  llm.py  logger.py  main.py  prompt.py  schema.py  sql_generator.py  summarize.py  validator.py
